# meetup-graph-codex

./: .gitignore  Cargo.toml  README.md  REPORT.md  helix.toml
data/: bythebay-graph.json  sample-meetup-graph.json
data/enriched/: companies.json  companies.jsonl  conferences.json  conferences.jsonl  meetups.json  meetups.jsonl  projects.json  projects.jsonl  speakers.json  speakers.jsonl  summary.json  talks.json  talks.jsonl
data/enriched/batches/: batch-001.json  batch-002.json  batch-003.json  batch-004.json  batch-005.json  batch-006.json  batch-007.json  batch-008.json  batch-009.json  batch-010.json
data/raw/extracted/: bythebay-20260508-agentic-coding-with-discipline-and-skill-practical-techniques-and-tips-yk-sugi-cs-dojo.json  bythebay-20260508-agents-need-more-than-vector-search-prashanth-rao-lancedb.json  bythebay-20260508-aging-evolving-software-tools-and-ourselves-jeremy-smith-netflix.json  bythebay-20260508-ai-and-data-streaming-integrating-agents-with-data-in-motion-for-real-time-enterprise-intelligence-peter-corless-redpanda.json  bythebay-20260508-ai-for-good-fighting-health-insurance-with-ai-holden-karau.json  bythebay-20260508-apache-iceberg-enabling-an-open-lakehouse-architecture-for-large-scale-analytics-dipankar-mazumdar-onehouse-ai.json  (+1073 more)
docs/: rust-graph-loader-book-ed2.body.typ  rust-graph-loader-book-ed2.md  rust-graph-loader-book-ed2.typ  rust-graph-loader-book.body.typ  rust-graph-loader-book.md  rust-graph-loader-book.typ
scripts/: enrich_meetup_entities.py
src/: graph_loader.rs  main.rs
(+3118 files in other folders)
