[package]
name = "bythebay-scraper"
version = "0.1.0"
edition = "2024"
default-run = "bythebay-scraper"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", default-features = false, features = ["clock"] }
clap = { version = "4.6.1", features = ["derive"] }
html-escape = "0.2.13"
helix-db = "2.0.0"
redis = "1.2.1"
regex = "1.12.3"
reqwest = { version = "0.13.3", default-features = false, features = ["rustls", "http2", "charset", "gzip", "json", "blocking"] }
scraper = "0.26.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
slug = "0.1.6"
base64 = "0.22.1"
surrealdb = { version = "3.1.0-beta.3", default-features = false, features = ["protocol-ws", "rustls"] }
tokio = { version = "1.52.2", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
url = "2.5.8"
